--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@
 .container {
   max-width: 1110px;
   margin: auto;
-  padding: 0px 38px 38px 38px;
+  padding: 0 15px;
 }
 
 body {
@@ -70,8 +70,9 @@ h1 {
 }
 
 /* img.people-img {
-  display: block;
-} */
+  width: 1110px;
+  height: 335px;
+}  */
 
 .maintext {
   position: absolute;
@@ -234,7 +235,7 @@ h1 {
   padding-bottom: 76px;
 }
 
-#second>.container-laptop {
+#second>.container {
   padding: 38px 0px;
 }
 
@@ -262,15 +263,26 @@ h1 {
   justify-content: center;
 }
 
+.about-img__wrapper .about-img__container svg {
+  width: 445px;
+  height: 293px;
+}
+
 .about-img__container img {
   max-width: 445px;
-  /* height: 293px; */
+  height: 293px;
 }
 
 .secondlastpcenter {
   text-align: center;
   display: flex;
   justify-content: center;
+}
+
+.secondlastpcenter .centertext {
+  color: #737C85;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .text-wrapper p {
@@ -322,15 +334,13 @@ h1 {
   justify-content: center;
 }
 
-.svgcolumn1 {
+.oneoffsvg {
   width: 89px;
   height: 89px;
-  background: url(images/icons.svg) 0px 0px;
   display: flex;
 }
 
-.svgcolumn2 {
-  background: url(images/icons.svg) -88px 0px;
+.longtermsvg {
   width: 89px;
   height: 89px;
   display: flex;
@@ -340,6 +350,10 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.text_img_width {
+  max-width: 540px;
 }
 
 .lefttext1 {
@@ -375,8 +389,8 @@ h1 {
   flex-wrap: wrap;
 }
 
-.container-laptop {
-  max-width: 1366px;
+.container {
+  max-width: 1140px;
   margin: auto;
 }
 
@@ -386,9 +400,17 @@ h1 {
   margin-top: 95px;
 }
 
-#fourth>.container-laptop>.FirstGrid>.firstgrid-element {
+.ulimg {
+  max-width: 635px;
+}
+
+.p_img_width {
+  max-width: 728px;
+}
+
+#fourth>.container>.FirstGrid>.firstgrid-element {
   background: rgb(255, 255, 255);
-  width: calc( (100% - 252px) / 3);
+  width: calc( (100% - 100px) / 3);
   margin: 30px 15px 48px 15px;
   display: flex;
   max-width: 350px;
@@ -396,11 +418,11 @@ h1 {
   background: #FFFFFF;
 }
 
-#fourth>.container-laptop>.FirstGrid>.firstgrid-element>.svgtextflex {
+#fourth>.container>.FirstGrid>.firstgrid-element>.svgtextflex {
   width: 294px;
 }
 
-#fourth>.container-laptop>.FirstGrid>.firstgrid-element>.textgrid {
+#fourth>.container>.FirstGrid>.firstgrid-element>.textgrid {
   padding-bottom: 26px;
   margin-bottom: 0px;
 }
@@ -435,58 +457,58 @@ h1 {
 }
 
 .laptopbooksvg {
-  background: url(images/icons.svg) 0px -90px;
-  width: 69px;
-  height: 69px;
+  /* background: url(images/icons.svg) 0px -90px; */
+  width: 72px;
+  height: 72px;
   display: flex;
-  margin: 20px;
+  /* margin: 20px;
   margin-right: -10px;
-  padding-right: 22px
+  padding-right: 22px */
 }
 
 .penbooksvg {
-  background: url(images/icons.svg) -72px -89px;
+  /* background: url(images/icons.svg) -72px -89px; */
   width: 72px;
   height: 72px;
   display: flex;
   margin: 20px 0px 20px 0px;
-  padding-right: 26px;
+  /* padding-right: 26px; */
 }
 
 .pencbooksvg {
-  background: url(images/icons.svg) -145px -89px;
+  /* background: url(images/icons.svg) -145px -89px; */
   width: 72px;
   height: 72px;
   display: flex;
   margin: 20px;
-  padding-right: 26px;
+  /* padding-right: 26px; */
 }
 
 .shoutsvg {
-  background: url(images/icons.svg) -216px -89px;
+  /* background: url(images/icons.svg) -216px -89px; */
   width: 72px;
   height: 72px;
   display: flex;
   margin: 20px;
-  padding-right: 26px;
+  /* padding-right: 26px; */
 }
 
 .graphsvg {
-  background: url(images/icons.svg) -288px -89px;
+  /* background: url(images/icons.svg) -288px -89px; */
   width: 72px;
   height: 72px;
   display: flex;
   margin: 20px;
-  padding-right: 26px;
+  /* padding-right: 26px; */
 }
 
 .risingsvg {
-  background: url(images/icons.svg) -360px -89px;
+  /* background: url(images/icons.svg) -360px -89px; */
   width: 72px;
   height: 72px;
   display: flex;
   margin: 20px;
-  padding-right: 26px;
+  /* padding-right: 26px; */
 }
 
 .svgtextflex {
@@ -507,15 +529,18 @@ h1 {
 .joinbtn {
   display: flex;
   justify-content: center;
-  height: 130px;
   margin: 30px;
-  padding-bottom: 76px;
-  padding-top: 72px;
+  /* padding-bottom: 76px;
+  padding-top: 72px; */
   font-weight: bold;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
   color: #FFF;
+}
+
+#seventh .joinbtn {
+  padding-top: 72px;
 }
 
 .joinbtn>a {
@@ -526,10 +551,11 @@ h1 {
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  height: 60px;
 }
 
-#fifth>.container-laptop {
-  max-width: 1366px;
+#fifth>.container {
+  max-width: 1110px;
   padding-top: 76px;
   padding-left: 128px;
   padding-bottom: 76px;
@@ -675,6 +701,11 @@ h1 {
   border-radius: 2px;
 }
 
+.img-f {
+  max-width: 445px;
+  max-height: 266px;
+}
+
 .panel {
   padding: 25px 20px 25px 42px;
   background: white;
@@ -735,12 +766,12 @@ h1 {
   background: #2B2F3E;
 }
 
-#sixth>.container-laptop>.text-wrapper-pr>.h2text {
+#sixth>.container>.text-wrapper-pr>.h2text {
   color: #FFF;
   justify-content: start;
 }
 
-#sixth>.container-laptop {
+#sixth>.container {
   display: flex;
   background: #2B2F3E;
   padding-top: 10px;
@@ -827,52 +858,52 @@ h1 {
   }
 }
 
-#seventh>.container-laptop {
+#seventh>.container {
   padding: 76px 128px 64px 128px;
 }
 
-#seventh>.container-laptop>.secondtext>p {
+#seventh>.container>.secondtext>p {
   padding-bottom: 70px;
   margin-bottom: 0px;
 }
 
-#seventh>.container-laptop>.SecondGrid>.gridelement {
+#seventh>.container>.SecondGrid>.gridelement {
   background: #F2F3F7;
   padding: 26px 12px;
   width: calc( (100% - 40px) / 3);
   display: flex;
 }
 
-#seventh>.container-laptop>.SecondGrid>.gridelement p {
+#seventh>.container>.SecondGrid>.gridelement p {
   width: calc(100% - 48px);
   margin: 0;
   padding-left: 12px;
 }
 
-#seventh>.container-laptop>.SecondGrid>.gridelement.wide {
+#seventh>.container>.SecondGrid>.gridelement.wide {
   width: calc( (100% - 40px) / 3 * 2 + 20px);
 }
 
-#seventh>.container-laptop>.SecondGrid>.gridelement:not(:nth-child(3n-2)) {
+#seventh>.container>.SecondGrid>.gridelement:not(:nth-child(3n-2)) {
   margin-left: 20px;
 }
 
-#seventh>.container-laptop>.SecondGrid>.gridelement>.svgtextflex {
+#seventh>.container>.SecondGrid>.gridelement>.svgtextflex {
   padding: 0px;
   padding-left: 12px;
 }
 
-#seventh>.container-laptop>.joinbtn {
+#seventh>.container>.joinbtn {
   padding-bottom: 0px;
 }
 
-#seventh>.container-laptop>.SecondGrid>.gridelement.wide {
+#seventh>.container>.SecondGrid>.gridelement.wide {
   grid-column-start: 1;
   grid-column-end: 3;
 }
 
-.container-laptop1 {
-  width: 1366px;
+.container1 {
+  width: 1110px;
 }
 
 #footer {
@@ -999,9 +1030,15 @@ ul {
   max-width: 540px;
 }
 
+#toneconsistensy .about-img__container svg {
+  width: 386px;
+  height: 151px;
+}
+
 .flexj {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 #notneed .flexj>div {
@@ -1012,7 +1049,7 @@ ul {
   display: flex;
 }
 
-#howtowrite .container-laptop>div:first-child {
+#howtowrite .container>div:first-child {
   flex-wrap: wrap;
 }
 
@@ -1026,21 +1063,17 @@ ul {
   padding-top: 32px;
 }
 
-#howtowrite .container-laptop {
+#howtowrite .container {
   padding-top: 40px;
   padding-bottom: 76px;
 }
 
-#howtowrite .container-laptop>div:nth-child(2)>p {
+#howtowrite .container>div:nth-child(2)>p {
   margin-top: 27px;
   font-family: 'Poppins';
   font-size: 16px;
   line-height: 24px;
   color: #737C85
-}
-
-.about-img__container {
-  padding-left: 89px;
 }
 
 #howtowrite .textleftimg {
@@ -1081,9 +1114,9 @@ ul {
 }
 
 .closesvg {
-  background: url(images/icons.svg) -178px -48px;
+  /* background: url(images/icons.svg) -178px -48px;
   width: 16px;
-  height: 16px;
+  height: 16px; */
   display: flex;
   padding-right: 16px;
 }
@@ -1116,9 +1149,34 @@ ul {
   margin-bottom: 0px;
 }
 
+.text_img_width .svgtext {
+  margin-left: 30px;
+  padding-left: 0px
+}
+
 .svgtext div:last-child>p {
   padding-bottom: 0px;
   margin-bottom: 0px;
+}
+
+.text_img_width div:nth-child(2)>div>div:last-child>p {
+  margin-top: 0px;
+  padding-left: 10px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.text_img_width div:nth-child(3)>div>div:last-child>p {
+  margin-top: 0px;
+  padding-left: 10px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .columsp {
@@ -1211,6 +1269,12 @@ ul {
   margin-top: 31px;
 }
 
+.simplicity_direct_svg {
+  display: flex;
+  justify-content: center;
+  margin-top: 31px;
+}
+
 .professsionalismsvg {
   background: url(images/icons.svg) -62.5px -161.5px;
   width: 62px;
@@ -1218,6 +1282,12 @@ ul {
   display: flex;
   justify-content: center;
   margin-left: 60px;
+  margin-top: 31px;
+}
+
+.professsionalism_direct_svg {
+  display: flex;
+  justify-content: center;
   margin-top: 31px;
 }
 
@@ -1231,6 +1301,12 @@ ul {
   margin-top: 31px;
 }
 
+.originality_direct_svg {
+  display: flex;
+  justify-content: center;
+  margin-top: 31px;
+}
+
 .simplicitybigsvg {
   margin-top: 16px;
   margin-right: 30px;
@@ -1241,6 +1317,16 @@ ul {
 #Simplicity {
   /* padding: 76px; */
   display: flex;
+}
+
+.simplicitybigsvg_direct {
+  margin-top: 16px;
+  margin-right: 30px;
+}
+
+.simplicitybigsvg_direct svg {
+  width: 351px;
+  height: 149px;
 }
 
 #Simplicity h2 {
@@ -1259,7 +1345,7 @@ ul {
   padding: 72px 72px 0px 72px;
 }
 
-.originality-svg {
+.originality-svg svg {
   width: 350px;
   height: 202px;
   margin-top: 16px;
@@ -1290,12 +1376,13 @@ ul {
 
 #notneed {
   padding: 42px 0px;
+  background-color: #F2F3F7;
 }
 
-#notneed>.container {
+/* #notneed>.container {
   padding-left: 0px;
   padding-right: 0px;
-}
+} */
 
 #professionalism ul>li {
   position: relative;
@@ -1303,6 +1390,9 @@ ul {
   margin: 10px;
   padding: 10px;
   padding-left: 29px;
+  padding-left: 29px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .ulfirst {
@@ -1319,9 +1409,9 @@ ul {
   padding: 0px;
 }
 
-#professionalism .container {
+/* #professionalism .container {
   padding: 0px;
-}
+} */
 
 #professionalism ul>li:last-child {
   margin-bottom: 0px;
@@ -1354,6 +1444,13 @@ ul {
   margin-top: 16px;
   /* margin-right: 30px; */
   margin-bottom: 33px;
+}
+
+.professionalis_svg_direct svg {
+  margin-top: 16px;
+  margin-bottom: 33px;
+  width: 445px;
+  height: 248px;
 }
 
 .flexj>p {
@@ -1427,12 +1524,40 @@ ul {
 }
 
 .img-guest {
-  width: 100%;
-  max-width: 634px;
-  height: 100%;
+  width: 634px;
 }
 
-@media only screen and (max-width: 1366px) {
+/* ------------------------------------------------------------------------------------------------ */
+
+/* ------------------------------------------------------------------------------------------------ */
+
+/* ------------------------------------------------------------------------------------------------ */
+
+/* ------------------------------------------------------------------------------------------------ */
+
+/* ------------------------------------------------------------------------------------------------ */
+
+/* ------------------------------------------------------------------------------------------------ */
+
+@media only screen and (max-width: 1139px) {
+  #formsvg .flexj {
+    justify-content: center;
+  }
+  .container {
+    width: 100%;
+  }
+  #howtowrite .container>.flexj {
+    justify-content: center;
+  }
+  #professionalism .container>.flexj {
+    justify-content: center;
+  }
+  #Originality .container>.flexj {
+    justify-content: center;
+  }
+  #notneed .container>.flexj {
+    justify-content: center;
+  }
   body {
     padding-left: 10px;
     padding-right: 10px;
@@ -1462,19 +1587,19 @@ ul {
   .fourth .FirstGrid {
     display: grid;
   }
-  #fourth>.container-laptop>.FirstGrid>.firstgrid-element {
+  #fourth>.container>.FirstGrid>.firstgrid-element {
     width: auto;
   }
-  #fifth>.container-laptop {
+  #fifth>.container {
     padding-left: 0px;
     padding-right: 0px;
   }
-  #sixth>.container-laptop {
+  #sixth>.container {
     padding-left: 20px;
     flex-wrap: wrap;
     padding-right: 20px;
   }
-  #seventh>.container-laptop {
+  #seventh>.container {
     padding-left: 20px;
     flex-wrap: wrap;
     padding-right: 20px;
@@ -1482,25 +1607,22 @@ ul {
   .lasttext {
     text-align: center;
   }
-  #second>.container-laptop {
+  #second>.container {
     padding-left: 20px;
     padding-right: 20px;
   }
-  #toneconsistensy {
+  /* #toneconsistensy {
     padding-left: 20px;
     padding-right: 20px;
-  }
-  /* #toneconsistensy .secondlastpcenter p {
-    padding-top: 100px;
   } */
-  #howtowrite {
+  /* #howtowrite {
     padding-left: 20px;
     padding-right: 20px;
-  }
-  #professionalism {
+  } */
+  /* #professionalism {
     padding-left: 20px;
     padding-right: 20px;
-  }
+  } */
 }
 
 @media only screen and (max-width: 1024px) {
@@ -1520,13 +1642,20 @@ ul {
     display: grid;
     justify-content: center;
   }
+  #second .about-img__wrapper {
+    flex-wrap: wrap;
+  }
 }
 
 @media only screen and (max-width: 768px) {
   .simplicitybigsvg {
     margin-right: 0px;
   }
-  #fourth>.container-laptop>.FirstGrid>.firstgrid-element {
+  #fourth .joinbtn {
+    padding: unset;
+    margin: unset;
+  }
+  #fourth>.container>.FirstGrid>.firstgrid-element {
     padding: 26px;
   }
   #footer>div:nth-child(2)>div:nth-child(2)>div {
@@ -1560,23 +1689,18 @@ ul {
     flex-wrap: wrap;
     justify-content: center;
   }
-  #Simplicity .container-laptop {
-    /* max-width: 450px; */
-    /* padding-left: 15px;
-    padding-right: 15px; */
-  }
-  #Simplicity {
+  /* #Simplicity {
     padding-left: 20px;
     padding-right: 20px;
-  }
+  } */
   #Originality .container {
     max-width: 450px;
     padding-left: 15px;
     padding-right: 15px;
   }
-  #notneed {
+  /* #notneed {
     padding: 0px 15px;
-  }
+  } */
   #notneed .flexj>div {
     padding-right: 0px;
   }
@@ -1587,7 +1711,7 @@ ul {
     margin-top: 46px;
     /* margin-right: 30px; */
     margin-left: 30px;
-    max-width: 538px
+    /* max-width: 538px */
   }
   #notneed .h2text {
     font-size: 40px;
@@ -1602,22 +1726,22 @@ ul {
     text-align: center;
     line-height: 60px;
   }
-  #seventh>.container-laptop>.SecondGrid>.gridelement.wide {
+  #seventh>.container>.SecondGrid>.gridelement.wide {
     width: auto;
   }
-  #seventh>.container-laptop>.SecondGrid>.gridelement:not(:nth-child(3n-2)) {
+  #seventh>.container>.SecondGrid>.gridelement:not(:nth-child(3n-2)) {
     margin-left: 0px;
   }
-  #seventh>.container-laptop>.SecondGrid>.gridelement {
+  #seventh>.container>.SecondGrid>.gridelement {
     width: 100%;
   }
   #seventh .h2text {
     text-align: center;
   }
-  .text-wrapper {
+  /* .text-wrapper {
     padding-left: 10px;
     padding-right: 10px;
-  }
+  } */
   body {
     padding-left: 0px;
     padding-right: 0px;
@@ -1633,9 +1757,6 @@ ul {
   #fifth {
     padding-left: 10px;
     padding-right: 10px;
-  }
-  #second .about-img__wrapper {
-    flex-wrap: wrap;
   }
   .about-img__container {
     padding-left: 0px;
@@ -1658,7 +1779,7 @@ ul {
     font-size: 40px;
     line-height: unset;
   }
-  #howtowrite .container-laptop {
+  #howtowrite .container {
     padding-top: 0px;
   }
   #fundamentalprinciples .h2centr {
@@ -1706,9 +1827,9 @@ ul {
   /* #Simplicity .flexj>div {
     max-width: 400px;
     } */
-  .simplicity {
+  /* .simplicity {
     padding-left: 20px;
-  }
+  } */
   .professionalism-svg {
     max-width: 100%;
   }
@@ -1730,6 +1851,9 @@ ul {
   .lasttext {
     font-size: 30px;
   }
+  .about-img__wrapper .about-img__container svg {
+    width: 350px;
+  }
 }
 
 @media only screen and (max-width: 400px) {
@@ -1742,6 +1866,13 @@ ul {
 }
 
 @media only screen and (max-width: 375px) {
+  #third {
+    padding-top: 30px;
+  }
+  #toneconsistensy .about-img__container svg {
+    max-width: 350px;
+    height: 151px;
+  }
   /* .secondlastpcenter{
   padding-top: 60px;
 } */
@@ -1762,9 +1893,9 @@ ul {
     font-size: 40px;
     line-height: unset;
   }
-  #header .joinheader {
+  /* #header .joinheader {
     margin-left: 15px;
-  }
+  } */
   .img-f>img {
     max-width: 100%;
   }
@@ -1772,7 +1903,7 @@ ul {
     max-width: 100%;
     margin-left: 0px;
   }
-  #Simplicity .container-laptop {
+  #Simplicity .container {
     max-width: 100%;
   } */
   /* #Simplicity .flexj>div {
@@ -1847,11 +1978,34 @@ ul {
     line-height: 65px;
     text-align: center;
   }
-  .logosvg {
+  /* .logosvg {
     padding-left: 10px;
-  }
+  } */
   #formsvg h1 {
     font-size: 32px;
     line-height: normal;
+  }
+  .originality-svg svg {
+    max-width: 350px;
+    margin-right: 0px;
+  }
+  .professionalis_svg_direct svg {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    max-width: 350px;
+  }
+  .simplicitybigsvg_direct {
+    margin-top: 5px;
+    margin-right: 0px;
+  }
+  #footer {
+    padding-right: 50px;
+  }
+  .footertext {
+    padding-left: unset;
+    width: unset
+  }
+  #footer>div:nth-child(2) {
+    padding-left: unset;
   }
 }
