--- a/styles/style.css
+++ b/styles/style.css
@@ -1127,6 +1127,7 @@ ul {
   font-size: 16px;
   line-height: 24px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   text-align: center;
 }
@@ -1449,9 +1450,8 @@ ul {
 .professionalis_svg_direct svg {
   margin-top: 16px;
   margin-bottom: 33px;
-  width: 445px;
-  height: 248px;
-}
+  max-width: 445px;
+  }
 
 .flexj>p {
   font-family: 'Poppins';
@@ -1863,6 +1863,11 @@ ul {
   #fifth h2 {
     font-size: 15px;
   }
+  .text_img_width .svgtext {
+    margin-left: 0px;
+  }
+  .goals-svg {
+    max-width: 350px;}
 }
 
 @media only screen and (max-width: 375px) {
@@ -2008,4 +2013,5 @@ ul {
   #footer>div:nth-child(2) {
     padding-left: unset;
   }
+
 }
