--- a/styles/style.css
+++ b/styles/style.css
@@ -69,10 +69,9 @@ h1 {
   color: #3333CC;
 }
 
-/* img.people-img {
-  width: 1110px;
-  height: 335px;
-}  */
+ .people-img {
+  max-width: 1110px;
+}  
 
 .maintext {
   position: absolute;
@@ -329,18 +328,26 @@ h1 {
   text-align: center;
 }
 
+.column1 {
+  margin: 0px 25px;
+}
+
+.column2 {
+  margin: 0px 25px;
+}
+
 .centersvg {
   display: flex;
   justify-content: center;
 }
 
-.oneoffsvg {
+.oneoffsvg svg {
   width: 89px;
   height: 89px;
   display: flex;
 }
 
-.longtermsvg {
+.longtermsvg svg  {
   width: 89px;
   height: 89px;
   display: flex;
@@ -456,7 +463,7 @@ h1 {
   width: 298px;
 }
 
-.laptopbooksvg {
+.laptopbooksvg svg  {
   /* background: url(images/icons.svg) 0px -90px; */
   width: 72px;
   height: 72px;
@@ -466,7 +473,7 @@ h1 {
   padding-right: 22px */
 }
 
-.penbooksvg {
+.penbooksvg svg  {
   /* background: url(images/icons.svg) -72px -89px; */
   width: 72px;
   height: 72px;
@@ -475,7 +482,7 @@ h1 {
   /* padding-right: 26px; */
 }
 
-.pencbooksvg {
+.pencbooksvg svg  {
   /* background: url(images/icons.svg) -145px -89px; */
   width: 72px;
   height: 72px;
@@ -484,7 +491,7 @@ h1 {
   /* padding-right: 26px; */
 }
 
-.shoutsvg {
+.shoutsvg svg  {
   /* background: url(images/icons.svg) -216px -89px; */
   width: 72px;
   height: 72px;
@@ -493,7 +500,7 @@ h1 {
   /* padding-right: 26px; */
 }
 
-.graphsvg {
+.graphsvg svg  {
   /* background: url(images/icons.svg) -288px -89px; */
   width: 72px;
   height: 72px;
@@ -502,7 +509,7 @@ h1 {
   /* padding-right: 26px; */
 }
 
-.risingsvg {
+.risingsvg svg  {
   /* background: url(images/icons.svg) -360px -89px; */
   width: 72px;
   height: 72px;
@@ -557,9 +564,7 @@ h1 {
 #fifth>.container {
   max-width: 1110px;
   padding-top: 76px;
-  padding-left: 128px;
   padding-bottom: 76px;
-  padding-right: 128px;
 }
 
 .header {
@@ -701,9 +706,9 @@ h1 {
   border-radius: 2px;
 }
 
-.img-f {
-  max-width: 445px;
-  max-height: 266px;
+.img-f svg {
+  width: 100%;
+  
 }
 
 .panel {
@@ -775,9 +780,9 @@ h1 {
   display: flex;
   background: #2B2F3E;
   padding-top: 10px;
-  padding-left: 128px;
+  /* padding-left: 128px; */
   padding-bottom: 10px;
-  padding-right: 128px;
+  /* padding-right: 128px; */
 }
 
 .text-wrapper-pr {
@@ -859,7 +864,7 @@ h1 {
 }
 
 #seventh>.container {
-  padding: 76px 128px 64px 128px;
+  padding: 76px 0px 64px 0px;
 }
 
 #seventh>.container>.secondtext>p {
@@ -1014,7 +1019,9 @@ ul {
   line-height: 18px;
   margin: 0px;
 }
-
+.footerp{
+  margin: 0px;
+}
 .textleftimg {
   width: 540px;
   margin-right: 125px;
@@ -1350,7 +1357,7 @@ ul {
   width: 350px;
   height: 202px;
   margin-top: 16px;
-  margin-right: 30px;
+  margin-right: 25px;
 }
 
 .close-svg-text {
@@ -1451,7 +1458,7 @@ ul {
   margin-top: 16px;
   margin-bottom: 33px;
   max-width: 445px;
-  }
+}
 
 .flexj>p {
   font-family: 'Poppins';
@@ -1785,6 +1792,9 @@ ul {
   #fundamentalprinciples .h2centr {
     margin-top: 30px;
   }
+  #third {
+    margin: 0px;
+  }
 }
 
 @media only screen and (max-width: 630px) {
@@ -1854,6 +1864,9 @@ ul {
   .about-img__wrapper .about-img__container svg {
     width: 350px;
   }
+  #seventh>.container>.secondtext>p {
+    padding-bottom: 0px;
+  }
 }
 
 @media only screen and (max-width: 400px) {
@@ -1867,7 +1880,8 @@ ul {
     margin-left: 0px;
   }
   .goals-svg {
-    max-width: 350px;}
+    max-width: 350px;
+  }
 }
 
 @media only screen and (max-width: 375px) {
@@ -1978,6 +1992,19 @@ ul {
     text-align: center;
     line-height: 60px;
   }
+  #fourth .h2text {
+    font-size: 36px;
+    line-height: 60px;
+    text-align: center;
+  }
+  #third .h2text {
+    font-size: 36px;
+    line-height: 60px;
+    text-align: center;
+  }
+  #fifth h2 {
+    line-height: 20px;
+  }
   #seventh .h2text {
     font-size: 50px;
     line-height: 65px;
@@ -2013,5 +2040,4 @@ ul {
   #footer>div:nth-child(2) {
     padding-left: unset;
   }
-
 }
