--- a/styles/style.css
+++ b/styles/style.css
@@ -1664,7 +1664,15 @@ ul {
 }
 
 @media only screen and (max-width: 768px) {
-  .lasttext p{
+  #fourth{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  #fourth > .container > .FirstGrid > .firstgrid-element {
+    margin-left: 5px;
+     margin-right: 5px; 
+  }
+  .lasttext p {
     margin-top: 0px;
     margin-bottom: 0px;
   }
@@ -1681,10 +1689,9 @@ ul {
     margin-top: 30px;
   }
   #fourth>.container>.FirstGrid>.firstgrid-element:first-child {
-    padding: 26px;
+    /* padding: 26px; */
     margin-top: 30px;
   }
-
   #footer>div:nth-child(2)>div:nth-child(2)>div {
     display: grid;
     padding-left: 10px;
@@ -1716,7 +1723,6 @@ ul {
     flex-wrap: wrap;
     justify-content: center;
   }
-
   #notneed .flexj>div {
     padding-right: 0px;
   }
@@ -1821,11 +1827,11 @@ ul {
   .acc_ctrl {
     padding-bottom: 10px;
   }
-  .acc_ctrl::before{
+  .acc_ctrl::before {
     top: 63%;
   }
-  .acc_ctrl::after{
-    top:63%
+  .acc_ctrl::after {
+    top: 63%
   }
   #third .h2text {
     font-size: 36px;
@@ -1996,7 +2002,6 @@ ul {
     text-align: center;
     line-height: 60px;
   }
-
   #fifth h2 {
     line-height: 20px;
   }
@@ -2023,7 +2028,7 @@ ul {
   #footer>div:nth-child(2) {
     padding-left: unset;
   }
-  #howtowrite > div > div:nth-child(3)>p {
+  #howtowrite>div>div:nth-child(3)>p {
     justify-content: center;
   }
 }
