--- a/styles/style.css
+++ b/styles/style.css
@@ -230,8 +230,7 @@ h1 {
 
 #fourth {
   background-color: #F2F3F7;
-  padding: 62px;
-  padding-bottom: 76px;
+  padding: 62px 0px 76px 0px;
 }
 
 #second>.container {
@@ -390,7 +389,7 @@ h1 {
   align-items: center;
 }
 
-.FirstGrid {
+#owl-grid {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -415,7 +414,7 @@ h1 {
   max-width: 728px;
 }
 
-#fourth>.container>.FirstGrid>.firstgrid-element {
+#fourth #owl-grid>.firstgrid-element {
   background: rgb(255, 255, 255);
   width: calc( (100% - 100px) / 3);
   margin: 30px 15px 48px 15px;
@@ -426,12 +425,14 @@ h1 {
   padding: 0px 20px;
 }
 
-#fourth>.container>.FirstGrid>.firstgrid-element>.svgtextflex {
-  width: 294px;
+#fourth #owl-grid .svgtextflex {
+  width: 100%;
   padding-left: 10px;
+  display: flex;
+  justify-content: center;
 }
 
-#fourth>.container>.FirstGrid>.firstgrid-element>.textgrid {
+#fourth #owl-grid .firstgrid-element>.textgrid {
   padding-bottom: 26px;
   margin-bottom: 0px;
 }
@@ -462,7 +463,7 @@ h1 {
   line-height: 21px;
   display: flex;
   align-items: center;
-  width: 298px;
+  max-width: 298px;
 }
 
 .laptopbooksvg svg {
@@ -475,14 +476,14 @@ h1 {
   width: 72px;
   height: 72px;
   display: flex;
-  margin: 20px 0px 20px 0px;
+  /* margin: 20px 0px 20px 0px; */
 }
 
 .pencbooksvg svg {
   width: 72px;
   height: 72px;
   display: flex;
-  margin: 20px;
+  margin: 0px 20px;
 }
 
 .shoutsvg svg {
@@ -1522,7 +1523,86 @@ ul {
 }
 
 /* ------------------------------------------------------------------------------------------------ */
+#header .container{
+  flex-wrap: wrap;
+}
+.mobile-btn {
+  margin: 15px auto 0px auto;
+  display: block;
+  color: #000;
+  height: 36px;
+  width: 36px;
+  border-top: 4px solid;
+  position: relative;
+  cursor: pointer;
+}
 
+.mobile-btn::after, .mobile-btn::before {
+  content: '';
+  display: block;
+  height: 4px;
+  margin-top: 6px;
+  background: currentColor;
+  position: relative;
+  transition: transform .3s ease;
+}
+
+.mobile-btn.active {
+  border-top-color: transparent;
+}
+
+.mobile-btn.active::after {
+  margin-top: 0px;
+  top: 2px;
+  transform: rotate(45deg);
+}
+
+.mobile-btn.active::before {
+  margin-top: 0px;
+  top: 6px;
+  transform: rotate(135deg);
+}
+.menu{
+  display: none;
+}
+.menu-mobile {
+  opacity: 0;
+  visibility: hidden;
+  text-align: center;
+  margin-top: 0px;
+  transform: translate3D(0, -50px, 0);
+  transition: .3s;
+}
+.menu-mobile {
+  padding: 0px;
+  background-color: #2B2F3E;
+  width: 100%;
+}
+.menu-mobile li {
+  padding: 10px;
+}
+.menu-mobile li a {
+  line-height: 1.4em;
+  padding: 20px 15px;
+  text-align: left;
+  color: #efefef;
+  text-decoration: none;
+}
+
+.menu-mobile.active {
+  visibility: visible;
+  border-radius: 25px;
+  opacity: 1;
+   transform: translate3D(0, 0, 0);
+}
+.owl-carousel.off {
+  display: block;
+}
+.firstgrid-element{
+  max-width: 350px;
+  background: #FFFFFF;
+ 
+}
 /* ------------------------------------------------------------------------------------------------ */
 
 /* ----------------------------------------RESPONSIVE---------------------------------------------- */
@@ -1596,10 +1676,8 @@ ul {
   .columns {
     flex-wrap: wrap;
   }
-  .fourth .FirstGrid {
-    display: grid;
-  }
-  #fourth>.container>.FirstGrid>.firstgrid-element {
+
+  #owl-grid>.firstgrid-element {
     width: auto;
   }
   #fifth>.container {
@@ -1656,9 +1734,37 @@ ul {
   #fourth>.container>.FirstGrid>.firstgrid-element {
     margin-bottom: 10px;
   }
+  .joinheader{
+    display: none;
+  }
+  .menu{
+    display: unset;
+  }
+  #fourth #owl-grid .svgtextflex {
+    flex-wrap: wrap-reverse;
+  }
 }
 
 @media only screen and (max-width: 768px) {
+  #header{
+    position: fixed;
+    background-color: #FFF; 
+    width: 100%;
+    z-index: 100;
+  }
+  #first{
+    padding-top: 50px;
+  }
+  #header .container {
+    padding-bottom: 60px;
+}
+
+/* #owl-grid .svgtextflex {
+  justify-content: center;
+} */
+
+/* //////// */
+
   #fourth{
     padding-left: 0px;
     padding-right: 0px;
@@ -1788,9 +1894,9 @@ ul {
     font-size: 40px;
     line-height: unset;
   }
-  #howtowrite .container {
+  /* #howtowrite .container {
     padding-top: 0px;
-  }
+  } */
   #fundamentalprinciples .h2centr {
     margin-top: 30px;
   }
@@ -1838,8 +1944,20 @@ ul {
     line-height: 60px;
     text-align: center;
   }
-}
+  #fourth #owl-grid .svgtextflex{
+    height: 74px;
+    padding-left: unset;
+    padding-top: 100px;
+  }
+  .boldd{
+    margin: 0;
+  }
+  .firstgrid-element{
+    display: flex;
+    margin-top: 15px;
+  }
 
+}
 @media only screen and (max-width: 630px) {
   #footer {
     padding-right: 0px;
@@ -1856,6 +1974,10 @@ ul {
   }
   #professionalism h2 {
     font-size: 36px;
+  }
+  .firstgrid-element{
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -1904,6 +2026,7 @@ ul {
   #formsvg label {
     font-size: 14px;
   }
+
 }
 
 @media only screen and (max-width: 400px) {
